src/test/deca/syntax/invalid/test_lexer_inclusion_de_fichier_inexistant.deca
// Test inclusion d'un fichier bidon
#include "test.decah"
